# fault

./: .clang-format  .clang-tidy  .clangd  .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE_3RD_PARTY  README.md  faultConfig.cmake.in  version.h.in
cmake/: install.cmake
include/fault/: attributes.h  config.h  core.hpp  fault.h  fault.hpp  format.hpp  macros.h
include/fault/adapter/: stacktrace.hpp
scripts/: symbol_resolver.py
src/: .clang-tidy  fault.cpp
tests/: CMakeLists.txt  crash_master.cpp  crash_target.cpp  test_c_api.c  test_cpp_api.cpp  test_cpp_api_2.cpp  test_hook_guard.cpp
